working but not final (maybe)

--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
     "typescript": "^5.4.2"
   },
   "scripts": {
-    "start": "ts-node ./src/index.ts puzzle4x4-unsolvable.txt"
+    "start": "ts-node ./src/index.ts puzzle49.txt"
   }
 }
